--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^4.21.2",
+    "axios": "^0.27.2",
+    "daisyui": "^2.15.4",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap-icons": "^1.8.4",
+    "react-dom": "18.2.0",
+    "react-infinite-scroll-component": "^6.1.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.7",
     "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.3"
   }
 }
